# pdv

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_user_profiles_and_credentials.py
src/: main.py  mcp_server.py
src/api/: consents.py  credentials.py  health.py  proof.py
src/kms/: __init__.py  aws_kms.py  base.py  local_kms.py  registry.py  vault_kms.py
src/storage/: database.py  models.py
tests/: conftest.py  test_consents.py  test_credentials.py  test_health.py  test_kms.py  test_proof.py  test_storage.py
