[tool.poetry]
name = "pdv-vault"
version = "0.1.0"
description = "Personal Data Vault service"
authors = ["PDV Team <pdv@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
uvicorn = "^0.29"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
flake8 = "^6.0"

[build-system]
requires = ["poetry>=1.3"]
build-backend = "poetry.core.masonry.api"
