[tool.poetry]
name = "pdv-vault"
version = "0.1.0"
description = "Personal Data Vault service"
authors = ["PDV Team <pdv@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
uvicorn = "^0.29"
SQLAlchemy = "^2.0"
alembic = "^1.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
flake8 = "^6.0"
httpx = "^0.27"

[build-system]
requires = ["poetry>=1.3"]
build-backend = "poetry.core.masonry.api"
